# juce-webview-agent-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  tests.yml
docs/: e2e.md  protocol.md  releasing.md  screen-recording.md
examples/playwright-test/: README.md  example.spec.mjs  fixtures.mjs  playwright.config.mjs
juce_webview_agent_bridge/: juce_webview_agent_bridge.cpp  juce_webview_agent_bridge.h  juce_webview_agent_bridge.mm
juce_webview_agent_bridge/detail/: CaptureScript.h  LayerDebug.h  LayerDebug_mac.mm  LayerDebug_other.cpp  Screenshot.h  Screenshot_mac.mm  Screenshot_other.cpp  Screenshot_windows.cpp  WebAgentBridge.cpp  WebAgentBridge.h
scripts/: release.sh
skills/juce-webview-agent-bridge/: SKILL.md
skills/web-agent/: SKILL.md
src/: e2e.mts  shared.mts  web-agent.mts
tests/: CMakeLists.txt  TestMain.cpp  Test_WebAgentBridge.cpp  capture.test.mjs  e2e.test.mjs  package.test.mjs  page-helpers.test.mjs  release.test.mjs  web-agent.test.mjs
tests/types/: tsconfig.json  usage.ts
tools/: e2e.d.mts  e2e.mjs  shared.d.mts  shared.mjs  web-agent.mjs
